syntax = "proto2";

package protoProjector;

// Example TestPartition, can be used during development.
message TestPartition {
    repeated string endpoints     = 1; // endpoint address
    optional string coordEndpoint = 2;
}
